--- a/hub/package.json
+++ b/hub/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "generate:openapi": "ts-node scripts/generate-openapi.ts",
+    "generate:openapi": "tsx scripts/generate-openapi.ts",
     "test": "vitest --config vitest.config.ts",
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -12,19 +12,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^7.3.4",
-    "@prisma/client": "^6.11.1",
     "next": "15.3.5",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
@@ -33,7 +31,8 @@
     "supertest": "^7.1.3",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
 }
